<resources>
    <string name="app_name">A1RR</string>
    <string name="new_reservation">New Reservation</string>
    <string name="view_reservation">View Reservations</string>
    <string name="dish">Dish:</string>
    <string name="quantity">Quantity:</string>
    <string name="unit_price">Unit Price:</string>
    <string name="total">Total</string>
    <string name="select_dish">Select Dish</string>
    <string name="total_default">$0.00</string>
    <string name="next">Next</string>
    <string name="unit_price_default">0.00</string>
    <string name="quantity_default">1</string>
    <string name="name">Name:</string>
    <string name="time">Time:</string>
    <string name="choose_name_time">Enter Name and Time</string>
    <string name="confirmation">Confirm Reservation</string>
    <string name="delete">Delete</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="details">Details</string>
</resources>
