<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_google_signin_btn_text_dark_focused"
    tools:context="aoap.myapplication.DishActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/dish"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/quantity"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/quantity_et"
        android:layout_width="130dp"
        android:layout_height="41dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="24dp"
        android:gravity="right"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLines="1"
        android:text="@string/quantity_default"
        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/dishes_spinner" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/select_dish"
        android:textColor="@android:color/holo_red_light"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/unit_price"
        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/total_button"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/total"
        android:textColor="@android:color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/total_tv"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="20dp"
        android:gravity="right"
        android:text="@string/total_default"
        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/total_button"
        app:layout_constraintTop_toBottomOf="@+id/priceTV" />

    <Button
        android:id="@+id/dish_next_button"
        android:layout_width="0dp"
        android:layout_height="94dp"
        android:background="@color/colorAccent"
        android:text="@string/next"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/dishes_spinner"
        android:layout_width="262dp"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/priceTV"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="28dp"
        android:gravity="right"
        android:text="@string/unit_price_default"
        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/quantity_et" />
</android.support.constraint.ConstraintLayout>
